# CrazyMarbles

./: .gitignore  C#.txt  C++.txt  CMakeLists.txt  CrazyMarble.class.violet.html  README.html  README.md  cmakeTest.txt  cmakefile-template.txt  main.cpp  source.txt  source.txt~
Blender/: sphere.blend  sphere.blend1  sphereTest.b3d  sphereTest.blend  sphereTest.blend1
C4D/: Cell.c4d  Cell_angle.c4d  Cell_angle_int.c4d  Cell_pente.c4d  sphere.c4d
Collision/: CMakeLists  CMakeLists.txt
CrazyMarble/: CMakeLists.txt  Game.cpp  Game.hpp  Timer.cpp  Timer.hpp  main.cpp
CrazyMarble/Plateau/: Board.cpp  Board.hpp  Cell.cpp  Cell.hpp
CrazyMarble/Play/: Entities.cpp  Entities.hpp  Player.cpp  Player.hpp
CrazyMarble/Utils/: Position.cpp  Position.hpp  SoundUtils.cpp  SoundUtils.hpp  TextureLoader.cpp  TextureLoader.hpp
CrazyMarble3DCLion/: CMakeLists.txt  Game.cpp  Game.h  IrrlichtMain.cpp  IrrlichtMain.h  Menu.cpp  Menu.h  main.cpp
CrazyMarble3DCLion/GUI/: Credit.cpp  Credit.h  GUIBase.cpp  GUIBase.h  Menu.cpp  Menu.h  MenuLevelEditor.cpp  MenuLevelEditor.h  NickMenu.cpp  NickMenu.h
CrazyMarble3DCLion/GUI/GUIMessage/: NetworkMessage.cpp  NetworkMessage.h  WinLooseChoose.cpp  WinLooseChoose.h
CrazyMarble3DCLion/GUI/IntermediateMenu/: MenuLevelEditor.cpp  MenuLevelEditor.h  MenuPlayMode.cpp  MenuPlayMode.h  MenuServer.cpp  MenuServer.h  SoloMultiMenu.cpp  SoloMultiMenu.h
CrazyMarble3DCLion/GUI/LevelEditorMenu/: LvlEditorMapButton.cpp  LvlEditorMapButton.h  SideMapList.cpp  SideMapList.h
CrazyMarble3DCLion/GUI/MapMenu/: MapButton.cpp  MapButton.h  MapSelector.cpp  MapSelector.h
CrazyMarble3DCLion/GUI/PlayMessage/: WinLooseChoose.cpp  WinLooseChoose.h
CrazyMarble3DCLion/General/: Campaign.cpp  Campaign.h  Game.cpp  Game.h  IrrlichtMain.cpp  IrrlichtMain.h  LevelEditor.cpp  LevelEditor.h  Menu.cpp  Menu.h
CrazyMarble3DCLion/General/Network/: NetWorkMain.cpp  NetWorkMain.h  NetworkMain.cpp  NetworkMain.h
CrazyMarble3DCLion/Plateau/: Board.cpp  Board.h  Cell.cpp  Cell.h
CrazyMarble3DCLion/Play/: BlackMarbles.cpp  BlackMarbles.h  Entities.cpp  Entities.h  Player.cpp  Player.h
CrazyMarble3DCLion/Utils/: Chrono.cpp  Chrono.h  FileSystemUtils.cpp  FileSystemUtils.h  KeyboardEvent.cpp  KeyboardEvent.h  Position.cpp  Position.h  SoundManager.cpp  SoundManager.h  SoundUtils.cpp  SoundUtils.h  TextureLoader.cpp  TextureLoader.h
CrazyMarble3DCLion/data/: Nodes ID
CrazyMarble3DCLion/data/Maps/: 1ere map.irr  Rush and dodge.irr  campaign.path  lightning rush.irr  map.irr  map2.irr
CrazyMarble3DCLion/data/model/: Cell_angle.3ds  Cell_angle_int.3ds  Cell_flat.3ds  Cell_pente.3ds  Cell_pente.bullet  Cell_pente.x  Cell_small.3ds  cube.3ds  cube_color.psd  pyramide.3ds  sphere.3ds  sphereTest.blend.ms3d  sphere_small.3ds
CrazyMarble3d/: CrazyMarble3d.sln
CrazyMarble3d/CrazyMarble3d/: Board.cpp  Board.h  Cell.cpp  Cell.h  CrazyMarble3d.vcxproj  CrazyMarble3d.vcxproj.filters  Entities.cpp  Entities.h  Game.cpp  Game.h  Player.cpp  Player.h  main.cpp
CrazyMarble3d/CrazyMarble3d/Debug/: vc120.idb  vc140.idb
CrazyMarble3d/CrazyMarble3d/Debug/CrazyMarble3d.tlog/: CL.read.1.tlog  CL.write.1.tlog  CrazyMarble3d.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CrazyMarble3d/CrazyMarble3d/Release/CrazyMarble3d.tlog/: CL.read.1.tlog  CL.write.1.tlog  CrazyMarble3d.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
My First Game/: CMakeLists.txt  collision.cpp  collision.h  defines.h  fling.blend  fling.blend1  fling.blend2  fling.mtl  geometry.h  get_pixel.cpp  get_pixel.h  load_obj.cbp  load_obj.depend  load_objects.c  load_objects.h  main.cpp  obj.cpp  obj.h  randspawn.cpp  randspawn.h  repere.blend  repere.blend1  repere.mtl  robot.blend  robot.mtl  sdlglutils.cpp  sdlglutils.h  skybox.blend  skybox.mtl  sound.cpp  sound.h  stdout.txt  terrain.blend  terrain.blend1  terrain.blend2  terrain.mtl  terrain_large.blend  terrain_large.blend1  terrain_large.blend2
TestIrrlicht/: CMakeLists.txt  main.cpp
citybuilder-master/: CMakeLists.txt  game.cpp
citybuilder-master/Part 1 - State Manager/: game.cpp  main.cpp
citybuilder-master/Part 10 - Putting it All Together/: CMakeLists.txt  city.hpp  game.cpp
citybuilder-master/Part 8 - GUI System/: CMakeLists.txt  game.cpp
irrlicht/: irrlicht.sln
irrlicht/irrlicht/: irrlicht.vcxproj  main.cpp
irrlicht/irrlicht/Debug/: vc120.idb
irrlicht/irrlicht/Debug/irrlicht.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  irrlicht.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
irrlicht/irrlicht/Release/irrlicht.tlog/: irrlicht.lastbuildstate
isometric/: 2disometric.cpp  2disometric.h  CMakeLists.txt  imagemanager.cpp  imagemanager.h  loadbindings.cpp  loadbindings.h  main.cpp  sfml_extensions.cpp  sfml_extensions.h
isometric/random/: cont_random.cpp  cont_random.h  marsaglia.h  random_gen.h  random_global.cpp  random_global.h
isometric/tolua_bindings/: bind_2disometric.cpp  bind_2disometric.pkg  bind_random.cpp  bind_random.pkg  bind_sfml_audio.cpp  bind_sfml_audio.pkg  bind_sfml_graphics.cpp  bind_sfml_graphics.pkg  bind_sfml_system.cpp  bind_sfml_system.pkg  bind_sfml_window.cpp  bind_sfml_window.pkg
testIRRlich/: CMakeLists.txt  main.cpp
