CMAKE_MINIMUM_REQUIRED(VERSION 3.3)

PROJECT(CrazyMarbles)

SET(EXECUTABLE_OUTPUT bin/${CMAKE_BUILD_TYPE})

ADD_EXECUTABLE(CrazyMarbles main.cpp)
set(CMAKE_MODULE_PATH "D:/SFML/SFML-2.3.2/cmake/Modules" ${CMAKE_MODULE_PATH})
if(SFML_CMAKE_DIR)
    string(REPLACE "FindSFML.cmake" "" SFML_CMAKE_DIR ${SFML_CMAKE_DIR})
    set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" "${SFML_CMAKE_DIR}")
endif()
FIND_PACKAGE(SFML 2 COMPONENTS system window graphics audio REQUIRED)
INCLUDE_DIRECTORIES(${SFML_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(CrazyMarbles ${SFML_LIBRARIES})

